force-app/main/default/objects/Employees__c/Employees__c.object-meta.xml
<CustomObject>
    <label>Employees</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>