force-app/main/default/objects/Employees__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>