force-app/main/default/objects/Employees__c/fields/Additional_Role__c.field-meta.xml
<CustomField>
    <fullName>Additional_Role__c</fullName>
    <label>Additional Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller of Exams</fullName>
            </value>
            <value>
                <fullName>NCC Incharge</fullName>
            </value>
            <value>
                <fullName>Events Incharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>