force-app/main/default/objects/Employees__c/fields/Date_of_joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_joining__c</fullName>
    <label>Date of joining</label>
    <type>Date</type>
</CustomField>