force-app/main/default/objects/Employees__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant Professor</fullName>
            </value>
            <value>
                <fullName>Associate Professor</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Jr.Assistant</fullName>
            </value>
            <value>
                <fullName>Sr.Assistant</fullName>
            </value>
            <value>
                <fullName>Librarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>