force-app/main/default/objects/Employees__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teaching</fullName>
            </value>
            <value>
                <fullName>Non Teaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>