force-app/main/default/objects/Employees__c/fields/Father_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Name__c</fullName>
    <label>Father&apos;s Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>