force-app/main/default/objects/Employees__c/fields/Is_Ratified__c.field-meta.xml
<CustomField>
    <fullName>Is_Ratified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ratified</label>
    <type>Checkbox</type>
</CustomField>