force-app/main/default/objects/Employees__c/fields/Pan__c.field-meta.xml
<CustomField>
    <fullName>Pan__c</fullName>
    <label>Pan Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>