force-app/main/default/objects/Employees__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualifications</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Ed.</fullName>
            </value>
            <value>
                <fullName>M.Ed.</fullName>
            </value>
            <value>
                <fullName>B.A.</fullName>
            </value>
            <value>
                <fullName>M.A.</fullName>
            </value>
            <value>
                <fullName>B.Sc.</fullName>
            </value>
            <value>
                <fullName>M.Sc.</fullName>
            </value>
            <value>
                <fullName>M.Com</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>M.Sc.Physics</fullName>
            </value>
            <value>
                <fullName>M.Sc.Maths</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>