force-app/main/default/objects/Employees__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Botony</fullName>
            </value>
            <value>
                <fullName>Zoology</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Political science</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Sanskrit</fullName>
            </value>
            <value>
                <fullName>Public Administration</fullName>
            </value>
            <value>
                <fullName>Civics</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>