force-app/main/default/objects/Employees__c/recordTypes/Non_Teaching_Employee.recordType-meta.xml
<RecordType>
    <fullName>Non_Teaching_Employee</fullName>
    <active>true</active>
    <label>Non Teaching Employee</label>
</RecordType>