force-app/main/default/objects/Employees__c/recordTypes/Teaching_Employee.recordType-meta.xml
<RecordType>
    <fullName>Teaching_Employee</fullName>
    <active>true</active>
    <label>Teaching Employee</label>
</RecordType>