force-app/main/default/objects/Employees__c/validationRules/Aadhar_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Aadhar_Number__c, &quot;[0-9]{4} [0-9]{4} [0-9]{4}&quot;))</errorConditionFormula>
    <errorMessage>Invalid Aadhar Number. Please enter a valid Aadhar Number in the format &quot;1234 5678 9876&quot;.</errorMessage>
</ValidationRule>