force-app/main/default/objects/Employees__c/validationRules/PAN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Pan__c ,&quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;) )</errorConditionFormula>
    <errorMessage>Invalid PAN Number. Please enter a valid PAN Number in the format &quot;FYUOP5678A&quot;.</errorMessage>
</ValidationRule>