force-app/main/default/objects/Employees__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone__c ,&quot;[0-9]{10}&quot;))</errorConditionFormula>
    <errorMessage>Phone number should be maximum of 10 digits only</errorMessage>
</ValidationRule>