force-app/main/default/objects/Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Employee_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_of_joining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>